--- a/notebooks/1_sklearn_introduction.ipynb
+++ b/notebooks/1_sklearn_introduction.ipynb
@@ -1112,6 +1112,22 @@
     "plt.imshow(result.reshape(image.shape), cmap='gray')\n",
     "plt.axis('off')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Repeat the task now for the sle1 images, feel free to try either membrane, dna or phase_contrast"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# your code here"
+   ]
   }
  ],
  "metadata": {
