--- a/notebooks/2_sklearn_image_classification.ipynb
+++ b/notebooks/2_sklearn_image_classification.ipynb
@@ -791,12 +791,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO add fine tunning example of one of the models\n",
-    "# TODO add exercise to classify well segmented and badly segmented cells"
+    "# TODO add exercise to classify well segmented and badly segmented cells, maybe connect with previous exercise and perform watershed segmentation?"
    ]
   },
   {
