--- a/notebooks/2_sklearn_image_classification.ipynb
+++ b/notebooks/2_sklearn_image_classification.ipynb
@@ -318,7 +318,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import StandardScaler # TODO change to custom function\n",
     "\n",
     "rows, columns = data.shape\n",
     "\n",
