changes to markdown instructions to make it clearer and fix some typos

--- a/notebooks/1_sklearn_introduction.ipynb
+++ b/notebooks/1_sklearn_introduction.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "---\n",
     "\n",
-    "start by using the image found in \"../data/images/wt_dna.tif\"\n",
+    "start by using the image found in `../data/images/wt_dna.tif`\n",
     "\n",
     "and then let's display it using [matplotlib imshow](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.imshow.html) function\n",
     "\n",
@@ -49,10 +49,7 @@
     "\n",
     "---\n",
     "  \n",
-    "Note: when in doubt about a specific function you can always use the help function to get the documentation:\n",
-    "```python\n",
-    "help(function_name)\n",
-    "```\n",
+    "Note: when in doubt about a specific function you can always use the help function to get the documentation (`help(function_name)`) or, put the cursor inside the function you need help for and press `Shift+Tab` (_Note:_ only works in the browser) to get more information\n",
     "\n",
     "don't forget, you need to import it first"
    ]
@@ -98,15 +95,11 @@
    "source": [
     "## 3. Normalize the intensity values of the image to range 0 to 1\n",
     "When dealing with machine learning approaches, images should be normalized for machine learning. This ensures that pixel values are scaled to a consistent range, typically between 0 and 1, which helps improve model convergence, reduces numerical instability, and ensures that features are treated uniformly during training.\n",
+    "There are many ways to normalize images, for these exercises we will use [Min Max Normalization](https://en.wikipedia.org/wiki/Normalization_(image_processing)).\n",
     "\n",
-    "---\n",
-    "\n",
-    "This can be achieved by the following calculation:\n",
-    "```python\n",
-    "normalized_image = (image - min_value) / (max_value - min_value)\n",
+    "```math\n",
+    "I_{norm} = (I - I_{min})\\frac{newMax - newMin}{I_{max} - I_{min}} - newMin\n",
     "```\n",
-    "\n",
-    "---\n",
     "\n",
     "Let's create our own normalization fuction using numpy array [min](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.min.html) and [max](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.max.html) methods to find the min and max values of the image and perform the calculation.\n",
     "We are also going to convert it's values to float precision by using the [astype](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.astype.html) method and numpy's float32 datatype.\n",
@@ -117,6 +110,10 @@
     "---\n",
     "\n",
     "Use the following skeleton for the function:\n",
+    "\n",
+    "_Hint_: newMax and newMin can be ommited since we want to normalize between 0 and 1\n",
+    "\n",
+    "Example code:\n",
     "```python\n",
     "def custom_function(input):\n",
     "    # your code here\n",
@@ -216,14 +213,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Using unsupervised machine learning for segmentation\n",
+    "## 4. Using unsupervised machine learning for segmentation\n",
     "\n",
     "One of the great things about scikit-learn is that most machine learning models follow the same structure for their API:\n",
     "1. They are typically writen as Python classes that need to be initialized\n",
-    "2. have a .fit(data) method to train\n",
-    "3. a .predict(data) method to make predictions\n",
+    "2. have a `.fit(data)` method to train\n",
+    "3. a `.predict(data)` method to make predictions\n",
     "\n",
-    "---\n",
+    "\n",
+    "Example code:\n",
     "\n",
     "```python\n",
     "from sklearn.model_module import Model\n",
@@ -260,8 +258,8 @@
     "reshaped_array = array.reshape((-1, 1))\n",
     "```\n",
     "\n",
-    "In this case we can consider the n_samples equal to n_pixels and n_features equal to it's value.  \n",
-    "So it's final shape should correspond to (n_pixels, 1)"
+    "In this case we can consider the `n_samples` equal to `n_pixels` and `n_features` equal to it's value.  \n",
+    "So it's final shape should correspond to `(n_pixels, 1)`"
    ]
   },
   {
@@ -287,9 +285,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next:\n",
+    "Exercise:\n",
     "1. train the model using the reshaped image\n",
-    "2. predict using the same reshaped image (we would typically want to test the quality of the segmentation on data not used for training)\n",
+    "2. predict using the same reshaped image (_Note_: we would typically want to test the quality of the segmentation on data not used for training)\n",
     "3. reshape the predicted output to the original image shape\n",
     "4. display it"
    ]
@@ -311,17 +309,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Let's display the segmented image together with the original image and ground truth mask\n",
+    "## 5. Let's display the segmented image together with the original image and ground truth mask\n",
     "\n",
-    "The ground truth mask can be found on the same path as the original image with name \"wt_mask.tif\".  \n",
-    "Use imread again to load it.  \n",
+    "The ground truth mask can be found on the same path as the original image with name \"`wt_mask.tif`\".  \n",
+    "Use `imread` again to load it.  \n",
     "  \n",
     "We can use matplotlib subplots to display multiple images at once:\n",
     "```python\n",
     "plt.subplot(n_rows, n_cols, image_index)\n",
     "plt.title(\"Image Title\")\n",
     "plt.imshow(image, cmap='gray')\n",
-    "plt.axis('off') # just to make it look better\n",
+    "plt.axis('off') # just to make it look better to remove unnecessery axis which occupy space in the image frame\n",
     "```\n",
     "\n",
     "Step-by-step:\n",
@@ -396,7 +394,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Metrics for image segmentation quality\n",
+    "## 6. Metrics for image segmentation quality\n",
     "There are several metrics to evaluate the quality of segmentation. In this example, we will use the Intersection over Union (IoU) metric:  \n",
     "  \n",
     "![image.png](attachment:image.png)\n",
@@ -407,22 +405,19 @@
     "\n",
     "### Implement your own IoU function\n",
     "\n",
-    "First we need to make sure that both ground truth image and the segmentation have the desired data type (booleans: True/False).  \n",
-    "- We can do this by using the [astype](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.astype.html) method and Python's bool datatype.  \n",
+    "1. First we need to make sure that both ground truth image and the segmentation have the desired data type when playing with masks (booleans: True/False).  \n",
+    "    - We can do this by using the [astype](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.astype.html) method and Python's bool datatype.  \n",
     "\n",
-    "---\n",
+    "2. Then we need to calculate the intersection between the masks. With booleans, this can be achieved by doing a logical `and` operation to check which elements are in both masks:\n",
+    "    - using numpy's [logical_and](https://numpy.org/doc/2.0/reference/generated/numpy.logical_and.html) method\n",
     "\n",
-    "Then we need to calculate the intersection between the images:\n",
-    "- using numpy's [logical_and](https://numpy.org/doc/2.0/reference/generated/numpy.logical_and.html) method\n",
-    "Followed by the union:\n",
-    "- using [logical_or](https://numpy.org/doc/2.0/reference/generated/numpy.logical_or.html) method\n",
-    "\n",
-    "---\n",
+    "3. Followed by the union, which can be achieved with a logical `or` operation, checking which pixels are in union of both masks:\n",
+    "    - using [logical_or](https://numpy.org/doc/2.0/reference/generated/numpy.logical_or.html) method\n",
     "\n",
     "And finally we can calculate IoU as:\n",
     "```python\n",
     "iou_score = float(np.sum(intersection) / np.sum(union))\n",
-    "# np.sum will count the number of pixels in the intersection and union that a value of True\n",
+    "# np.sum will count the number of pixels in the intersection and union that have a value of True (== 1)\n",
     "```\n",
     "\n",
     "---\n",
@@ -430,13 +425,13 @@
     "Use the following skeleton to define the iou function:\n",
     "```python\n",
     "def iou(image1, image2):\n",
-    "    image1 = image1.astype(bool)\n",
-    "    image2 = image2.astype(bool)\n",
+    "    # mask_1 data type as bool\n",
+    "    # mask_2 data type as bool \n",
     "    \n",
-    "    intersection = np.logical_and(image1, image2)\n",
-    "    union = np.logical_or(image1, image2)\n",
+    "    # calculate the intersection\n",
+    "    # calculate the union\n",
     "\n",
-    "    iou_score = float(np.sum(intersection) / np.sum(union))\n",
+    "    # return the iou score\n",
     "    return iou_score\n",
     "```\n"
    ]
@@ -487,9 +482,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Repeat the same task by yourself using the either wt_membrane.tif or wt_phase_contrast.tif\n",
+    "## 6.2 Repeat the same task by yourself using a different image (`wt_membrane.tif` or `wt_phase_contrast.tif`)\n",
     "\n",
-    "- Use imread to load the image\n",
+    "- Load the image\n",
     "- Normalize the intensities\n",
     "- Train a KMeans model with your new image\n",
     "- Predict the segmentation with your new image\n",
@@ -520,7 +515,7 @@
     "Let's start by loading the images we want to segment using the [imread](https://scikit-image.org/docs/stable/api/skimage.io.html#skimage.io.imread) function of scikit-image, found in the io module.  \n",
     "  \n",
     "  \n",
-    "Start by using the image found in \"../data/images/wt_dna.tif\" and don't forget to normalize the intensities."
+    "Start by using the image found in `../data/images/wt_dna.tif` and don't forget to normalize the intensities."
    ]
   },
   {
@@ -566,7 +561,7 @@
     "   \n",
     "  \n",
     "  \n",
-    "Let's use label 1 for background and 2 for cells.\n",
+    "Let's use label `1` for background and `2` for cells.\n",
     "\n",
     "```python\n",
     "labels = np.zeros_like(image)\n",
@@ -626,25 +621,28 @@
    "metadata": {},
    "source": [
     "## 9. Adding extra features to the training data\n",
-    "Although we could actually train with just the pixel values, we can also add more features to the training data.  \n",
-    "This is especially important when we are performing shallow learning as otherwise the classifier wouldn't have enought data to actually learn.\n",
+    "Although we could actually train with just the pixel values, they may not contain enough information to do a good job. It would be a more expensive way of doing a simple intensity threshold wihtout improving on it. \n",
+    "\n",
+    "So, we can add more features to the training data to increase the classifier power. \n",
+    "This is especially important when we are performing shallow learning as, otherwise, the classifier wouldn't have enought data to actually learn meaningful differences.\n",
     "  \n",
     "\n",
     "For this we are going to create a custom function to generate features from the image.\n",
-    "These features can be many things, but often a good starting point is to apply several filters to the image and use those as features.\n",
+    "These features can be many things, but often a good starting point is to apply several filters to the image and use the output as features.\n",
     "We will be using [scikit-image filters](https://scikit-image.org/docs/dev/api/skimage.filters.html) module for this.\n",
     "Let's try to use:\n",
     "- [gaussian](https://scikit-image.org/docs/dev/api/skimage.filters.html#skimage.filters.gaussian)\n",
-    "- [sobel](https://scikit-image.org/docs/dev/api/skimage.filters.html#skimage.filters.sobel)\n",
+    "- [sobel](https://scikit-image.org/docs/dev/api/skimage.filters.html#skimage.filters.sobel) (edge detection)\n",
     "- [median](https://scikit-image.org/docs/dev/api/skimage.filters.html#skimage.filters.median)\n",
     "\n",
-    "Don't forget that as before we need our data to be in shape (n_samples, n_features).\n",
+    "_Note_: Don't forget that, as before, we need our data to be in shape `(n_samples, n_features)`.\n",
+    "\n",
     "Use the following skeleton for the new custom function:\n",
     "\n",
     "```python\n",
     "def generate_feature_stack(image):\n",
     "    # determine features\n",
-    "    features_1 = filters.filter_1(image)\n",
+    "    features_1 = filters.filter_1(image) # don't forget to add the filter parameters if needed\n",
     "    features_2 = filters.filter_2(image)\n",
     "    features_3 = filters.filter_3(image)\n",
     "\n",
@@ -688,7 +686,7 @@
    "source": [
     "Next:\n",
     "1. use the newly defined function to create the feature stack for our normalized image\n",
-    "2. display the features usign the matplotlib imshow function.  We need to reshape the features in order to display them as 2D images."
+    "2. display the features usign the matplotlib `imshow` function. __Note__: We need to reshape the features in order to display them as 2D images."
    ]
   },
   {
@@ -749,21 +747,22 @@
    "metadata": {},
    "source": [
     "## 10. Format the data according to scikit-learn requirements.\n",
-    "Since we have only partially labelled images, we need create the training arrays with just the pixels that have been annotated.\n",
+    "Since we have only partially labelled images, we need to create the training arrays with just the pixels that have been annotated.\n",
     "\n",
-    "We can use numpy index filtering to remove all pixels from the feature and annotations which have not been annotated.\n",
-    "Let's create our own custom function that performs this for both the feature stack and the annotation.\n",
+    "We can use numpy index filtering to remove all pixels from the `feature` and `labels` arrays which have not been annotated.\n",
+    "\n",
+    "Let's create our own custom function that performs this for both the `feature` stack and `labels`.\n",
     "```python\n",
     "def format_data(feature_stack, annotation):\n",
-    "    # start by transposing the feature stack to be in the desired shape\n",
-    "    X = feature_stack.T\n",
-    "    # then let's use ravel to make annotations a 1D array\n",
+    "    # start let's use ravel to make annotations a 1D array\n",
     "    y = annotation.ravel()\n",
+    "    # then transpose the feature stack so that each feature will have the same indexes as the annotations\n",
+    "    X = feature_stack.T\n",
     "\n",
-    "    # then we removel all pixels from the feature and annotations which have not been annotated\n",
     "    # start by creating a binary mask on labelled pixels\n",
     "    mask = y > 0 # creates a mask of True and False\n",
     "\n",
+    "    # then we removel all pixels from the feature and annotations which have not been annotated\n",
     "    # apply the mask\n",
     "    X = X[mask] # with numpy arrays this allows us to select only the pixels that are True in the mask array\n",
     "    y = y[mask]\n",
@@ -794,7 +793,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "apply the function to the feature stack and the annotations to generate the formated data, store them in variables called X_train and y_train"
+    "apply this function to the feature stack and the annotations to generate the formated data and store them in variables called `X_train` and `y_train`. \n",
+    "\n",
+    "In machine learning contexts, it is common to use \"X\" and \"Y\" variables for data and labels, respectively, which are not to be confused with the dimensions of image data."
    ]
   },
   {
@@ -821,6 +822,8 @@
    "metadata": {},
    "source": [
     "## 11. Let's train the random forest classifier\n",
+    "Now we use the training data we just prepared to train a new random forest model.\n",
+    "\n",
     "Remember that all scikit-learn models have roughly the same API so we do the following:\n",
     "```python\n",
     "from sklearn.model_module import Model\n",
@@ -830,7 +833,7 @@
     "# then we need to reshape the output to the desired shape\n",
     "```\n",
     "\n",
-    "The Rnadom Forest classifier is part of the ensemble module of scikit-learn."
+    "The Random Forest classifier is part of the ensemble module of scikit-learn."
    ]
   },
   {
@@ -1338,14 +1341,14 @@
    "metadata": {},
    "source": [
     "## 13. Let's use napari to create a better annotation image\n",
-    "1. On BAND open napari and load the wt_dna.tif image there.\n",
+    "1. On BAND open napari and load the `wt_dna.tif` image there.\n",
     "2. Create a new label image\n",
     "3. Use the drawing tool to label background with 1 and cells with 2\n",
-    "4. Save the label layer as wt_labels.tif\n",
-    "5. load the annotations here and repeat the steps above:\n",
-    "- format data\n",
-    "- train classifier\n",
-    "- predict, visualize and measure"
+    "4. Save the label layer as `wt_labels.tif`\n",
+    "5. load the annotations here and repeat the steps from above:\n",
+    "    - format data\n",
+    "    - train classifier\n",
+    "    - predict, visualize and measure"
    ]
   },
   {
@@ -1404,7 +1407,7 @@
    "metadata": {},
    "source": [
     "# 14. Let's try another supervised algorithm: K-Nearest Neighbors\n",
-    "This classifiers uses a parameter k, which is the number of nearest neighbors. The default value is 5.\n",
+    "This classifiers uses a parameter `k`, which is the number of nearest neighbors. The default value is 5.\n",
     "It is the supervised equivalent of the k-means clustering algorithm.\n",
     "\n",
     "Remember that all scikit-learn models have roughly the same API so we do the following:\n",
@@ -1421,7 +1424,7 @@
     "[KNeighborsClassifier](https://scikit-learn.org/stable/modules/generated/sklearn.neighbors.KNeighborsClassifier.html) is part of the neighbors module of scikit-learn.\n",
     "\n",
     "Let's:\n",
-    "1. train the new classifier using the previously defined X_train and y_train\n",
+    "1. Use the previously defined X_train and y_train to train the new classifier\n",
     "2. predict the segmentation using the transposed feature stack\n",
     "3. visualize the original image, ground truth and prediction\n",
     "4. measure the IoU score using the previously created function\n"
@@ -1511,7 +1514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
