--- a/notebooks/1_sklearn_introduction.ipynb
+++ b/notebooks/1_sklearn_introduction.ipynb
@@ -97,9 +97,9 @@
     "When dealing with machine learning approaches, images should be normalized for machine learning. This ensures that pixel values are scaled to a consistent range, typically between 0 and 1, which helps improve model convergence, reduces numerical instability, and ensures that features are treated uniformly during training.\n",
     "There are many ways to normalize images, for these exercises we will use [Min Max Normalization](https://en.wikipedia.org/wiki/Normalization_(image_processing)).\n",
     "\n",
-    "```math\n",
+    "\\begin{equation}\n",
     "I_{norm} = (I - I_{min})\\frac{newMax - newMin}{I_{max} - I_{min}} - newMin\n",
-    "```\n",
+    "\\end{equation}\n",
     "\n",
     "Let's create our own normalization fuction using numpy array [min](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.min.html) and [max](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.max.html) methods to find the min and max values of the image and perform the calculation.\n",
     "We are also going to convert it's values to float precision by using the [astype](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.astype.html) method and numpy's float32 datatype.\n",
