--- a/notebooks/1_sklearn_introduction.ipynb
+++ b/notebooks/1_sklearn_introduction.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install \"numpy<2\" scikit_image scikit_learn matplotlib seaborn pandas -q"
+    "!pip install numpy scikit_image scikit_learn matplotlib pandas -q"
    ]
   },
   {
