--- a/notebooks/3_sklearn_segmentation_filtering.ipynb
+++ b/notebooks/3_sklearn_segmentation_filtering.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install numpy scikit_image scikit_learn matplotlib seaborn pandas tifffile -q"
+    "!pip install numpy scikit_image scikit_learn matplotlib pandas -q"
    ]
   },
   {
@@ -51,7 +51,7 @@
     }
    ],
    "source": [
-    "from tifffile import imread\n",
+    "from skimage.io import imread\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
     "phase = imread(\"../data/images/wt_phase_contrast.tif\")\n",
