--- a/notebooks/2_sklearn_classification.ipynb
+++ b/notebooks/2_sklearn_classification.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install numpy scikit_learn matplotlib -q"
+    "!pip install numpy scikit_learn matplotlib pandas -q"
    ]
   },
   {
