fixed a markdown cell

--- a/notebooks/2_sklearn_classification.ipynb
+++ b/notebooks/2_sklearn_classification.ipynb
@@ -783,22 +783,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next step is to separate both the training and testing datasets into features (X) and labels (y).\n",
+    "Next step is to separate both the training and testing datasets into features (X) and labels (y).   \n",
+    "We will also take the opportunity to convert the data from a pandas Dataframe to numpy arrays by using the pandas method [.to_numpy()](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.to_numpy.html)   \n",
     "Let's do that by creating new variables with the corresponding columns:\n",
     "```python\n",
-    "X_train = train[[\"Column_name_1\", \"Column_name_2\"]]\n",
-    "y_train = train[\"Column_name_3\"]\n",
+    "X_train = train[[\"Column_name_1\", \"Column_name_2\"]].to_numpy()\n",
+    "y_train = train[\"Column_name_3\"].to_numpy()\n",
     "\n",
-    "X_test = test[[\"Column_name_1\", \"Column_name_2\"]]\n",
-    "y_train = test[\"Column_name_3\"]\n",
+    "X_test = test[[\"Column_name_1\", \"Column_name_2\"]].to_numpy()\n",
+    "y_train = test[\"Column_name_3\"].to_numpy()\n",
     "```\n",
     "\n",
     "\n",
     "```python\n",
     "columns_list = ['Area', 'Perimeter', 'Length', 'Width', 'Eccentricity','Irregularity']\n",
-    "```\n",
-    "\n",
-    "We will also take the opportunity to convert the data from a pandas Dataframe to numpy arrays by using the pandas method [.to_numpy()](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.to_numpy.html)"
+    "```\n"
    ]
   },
   {
