formula formating and fix function name

--- a/notebooks/1_sklearn_introduction.ipynb
+++ b/notebooks/1_sklearn_introduction.ipynb
@@ -95,11 +95,11 @@
    "source": [
     "## 3. Normalize the intensity values of the image to range 0 to 1\n",
     "When dealing with machine learning approaches, images should be normalized for machine learning. This ensures that pixel values are scaled to a consistent range, typically between 0 and 1, which helps improve model convergence, reduces numerical instability, and ensures that features are treated uniformly during training.\n",
-    "There are many ways to normalize images, for these exercises we will use [Min Max Normalization](https://en.wikipedia.org/wiki/Normalization_(image_processing)).\n",
+    "There are many ways to normalize images, for these exercises we will use [min-max Normalization](https://en.wikipedia.org/wiki/Normalization_(image_processing)).\n",
     "\n",
-    "\\begin{equation}\n",
-    "I_{norm} = (I - I_{min})\\frac{newMax - newMin}{I_{max} - I_{min}} - newMin\n",
-    "\\end{equation}\n",
+    "min-max Normalization is: \n",
+    "\n",
+    "$ I_{norm} = (I - I_{min})\\frac{newMax - newMin}{I_{max} - I_{min}} - newMin $\n",
     "\n",
     "Let's create our own normalization fuction using numpy array [min](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.min.html) and [max](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.max.html) methods to find the min and max values of the image and perform the calculation.\n",
     "We are also going to convert it's values to float precision by using the [astype](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.astype.html) method and numpy's float32 datatype.\n",
