added notebook agenda

--- a/notebooks/1_sklearn_introduction.ipynb
+++ b/notebooks/1_sklearn_introduction.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction to scikit-learn and classical machine learning for image segmentation and classification"
+    "# Introduction to scikit-learn and classical machine learning for image segmentation and classification\n",
+    "\n",
+    "In this notebook we are going to perform image segmentation using scikit-learn machine learning models.   \n",
+    "We will be covering:\n",
+    "1. Image Loading and normalization\n",
+    "2. Unsupervised machine learning segmentation using k-means clustering\n",
+    "3. Segmentation quality by measuring Intersection over Union (IoU)\n",
+    "4. Creating extra features (data points) from pixel values\n",
+    "5. Supervised machine learning with random forest classifier"
    ]
   },
   {
@@ -819,7 +827,7 @@
     "## 11. Let's train the random forest classifier\n",
     "Now we use the training data we just prepared to train a new random forest model.\n",
     "\n",
-    "Remember that all scikit-learn models have roughly the same API so we do the following:\n",
+    "Remember that all scikit-learn models have roughly the same API so we do the following:   \n",
     "```python\n",
     "from sklearn.model_module import Model\n",
     "model = Model()\n",
