added notebook agenda

--- a/notebooks/2_sklearn_classification.ipynb
+++ b/notebooks/2_sklearn_classification.ipynb
@@ -4,7 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction to scikit-learn classification for single cell data"
+    "# Introduction to scikit-learn classification for single cell data\n",
+    "   \n",
+    "In this notebook we are going to perform single-cell cell cycle classification using scikit-learn machine learning models.   \n",
+    "We will be covering:\n",
+    "1. Loading datasets using Pandas\n",
+    "2. Exploring the data\n",
+    "3. Data formatting and normalization\n",
+    "4. Training a simple Logistic Regression model for the automatic classification task\n",
+    "5. Evaluation of the model using the confusion matrix\n",
+    "6. k-fold cross-validation\n",
+    "7. Fine-tuning a model with parameter sweep"
    ]
   },
   {
