added notebook agenda

--- a/notebooks/3_sklearn_segmentation_filtering.ipynb
+++ b/notebooks/3_sklearn_segmentation_filtering.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Using scikit-learn classification to filter out badly segmented cells"
+    "# Using scikit-learn classification to filter out badly segmented cells\n",
+    "\n",
+    "In this notebook we are going to train a classifier to automatically filter out badly segmented cells using morphological measurements.   \n",
+    "We will be covering:\n",
+    "1. Instance segmentation from a binary image\n",
+    "2. Measuring morphological features\n",
+    "3. Training a classifier on manually annotated data of well and badly segmented cells\n",
+    "4. Filter out badly segmented cells using the trained classifier"
    ]
   },
   {
