added more context to markdown cells of exercises, to briefly explain the reasoning behind the steps and some markdown formatting of code

--- a/notebooks/3_sklearn_segmentation_filtering.ipynb
+++ b/notebooks/3_sklearn_segmentation_filtering.ipynb
@@ -40,6 +40,16 @@
     "---\n",
     "\n",
     "For that we will start by loading the phase contrast image (`../data/images/wt_phase_contrast.tif`) and the binary mask image (`../data/images/wt_mask.tif`):   \n",
+    "\n",
+    "Let's load the images seperately and show them with `matplotlib` using `subplots`.\n",
+    "\n",
+    "Step-by-step: \n",
+    "1. import the `skimage` module to load images\n",
+    "    - _hint_: such as done earlier using `imread`\n",
+    "1. load each image into a separate variable\n",
+    "1. display each image as a subplot using `matplotlib`\n",
+    "\n",
+    "--- \n",
     "```python\n",
     "from skimage.io import imread\n",
     "phase = imread(\"path/to/phase_contrast\")\n",
@@ -112,13 +122,14 @@
    "metadata": {},
    "source": [
     "## 3. Performing the instance segmentation\n",
-    "Some cells have an opening in the binary mask we can fill it using scipy [binary_fill_holes](https://docs.scipy.org/doc/scipy/reference/generated/scipy.ndimage.binary_fill_holes.html) from the [ndimage](https://docs.scipy.org/doc/scipy/reference/ndimage.html) module.   \n",
+    "\n",
+    "Some cells have an opening in the binary mask, we can fill it using scipy [`binary_fill_holes`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.ndimage.binary_fill_holes.html) from the [`ndimage`](https://docs.scipy.org/doc/scipy/reference/ndimage.html) module.   \n",
     "```python\n",
     "from scipy.ndimage import binary_fill_holes\n",
     "filled_mask = binary_fill_holes(mask)\n",
     "```\n",
     "   \n",
-    "Display the result using matplotlib imshow function.\n"
+    "Display the result using `matplotlib` `imshow` function.\n"
    ]
   },
   {
@@ -158,12 +169,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will be using the watershed algorithm together with the markers for the centres of each cell.   \n",
-    "Let's start by creating an image of the distance of each pixel to the background.  \n",
+    "We have touching cells forming a much larger mask  which does not accurately represent the cell.\n",
+    "So, we want to split the masks to get individual cells. We will be using the `watershed` algorithm to split masks.\n",
+    "\n",
+    "The `watershed` algorithm needs additional information before splitting the masks. It needs markers (also known as seeds) to define the center of the cell masks, and a distance map which creates an image of the distance of each pixel to the mask border.\n",
+    "\n",
+    "First, let's start by creating a distance map.  \n",
     "\n",
     "--- \n",
     "\n",
-    "For this we can use scipy distance transform from the [ndimage](https://docs.scipy.org/doc/scipy/reference/ndimage.html) module.\n",
+    "For this we can use `scipy` distance transform from the [ndimage](https://docs.scipy.org/doc/scipy/reference/ndimage.html) module.\n",
     "\n",
     "```python\n",
     "from scipy.ndimage import distance_transform_edt\n",
@@ -210,15 +225,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then we calculate create an image with only the local maxima.\n",
+    "Then, we need to create an image with only the markers. We will use the local maxima of the distance map to get an approximate center of the cells.\n",
     "\n",
-    "For this we can use scikit-image [peak_local_max](https://scikit-image.org/docs/stable/api/skimage.feature.html#skimage.feature.peak_local_max) from the [skimage.feature](https://scikit-image.org/docs/stable/api/skimage.feature.html) module.   \n",
+    "For this we can use scikit-image [`peak_local_max`](https://scikit-image.org/docs/stable/api/skimage.feature.html#skimage.feature.peak_local_max) from the [`skimage.feature`](https://scikit-image.org/docs/stable/api/skimage.feature.html) module to get a list of coordinated for the local maxima.\n",
     "\n",
-    "--- \n",
-    "Then we will create an empty image using numpy zero_like function and assign a value of True to each local maxima.   \n",
+    "However, since we only get a list of coordinates, we need to create an image with only the local maxima.\n",
+    "Then we will create an empty image using `numpy` `zero_like` function and assign a value of `True` to each local maxima.   \n",
     "\n",
     "---\n",
-    "And finally we will add individual labels for each local maxima using the [label](https://docs.scipy.org/doc/scipy/reference/generated/scipy.ndimage.label.html#scipy.ndimage.label) function from scipy ndimage module.\n",
+    "And finally we will add individual labels for each local maxima using the [label](https://docs.scipy.org/doc/scipy/reference/generated/scipy.ndimage.label.html#scipy.ndimage.label) function from `scipy.ndimage` module.\n",
     "\n",
     "```python\n",
     "import numpy as np\n",
@@ -228,8 +243,14 @@
     "coordinates_tuple = tuple(coordinates.T) # convert the coordinates to a tuple to allow numpy array indexing\n",
     "local_maxima = np.zeros_like(filled_mask, dtype=bool) # create an empty image\n",
     "local_maxima[coordinates_tuple] = True # assign a value of True to the local maxima\n",
-    "markers = label(local_maxima)[0] # add individual labels for each local maxima\n",
-    "```"
+    "markers = label(local_maxima)[0] # add individual label (ID) for each local maxima\n",
+    "```\n",
+    "\n",
+    "Step-by-step:\n",
+    "1. from the distance transform image, get a list of local maxima\n",
+    "1. create an empty image with the same shape as the original\n",
+    "1. assign a value of `True` to the pixel coordinates in the local maxima\n",
+    "1. add an individual label to each marker"
    ]
   },
   {
@@ -253,15 +274,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can apply the [watershed](https://scikit-image.org/docs/stable/api/skimage.segmentation.html#skimage.segmentation.watershed) algorithm from scikit-image.   \n",
+    "Now we can apply the [`watershed`](https://scikit-image.org/docs/stable/api/skimage.segmentation.html#skimage.segmentation.watershed) algorithm from scikit-image.   \n",
+    "\n",
+    "_Note_: for historical reasons, the `watershed` expects darker intensity values as the objects, so we need to invert the distance map. \n",
     "\n",
     "```python\n",
-    "from skimage.segmentation import watershed\n",
-    "labels = watershed(-distance, markers, mask=filled_mask) # we need to use the inverted distances\n",
+    "labels = watershed(-distance_map, markers, mask=filled_mask) # we need to use the inverted distance transform\n",
     "```\n",
     "\n",
     "---\n",
-    "We are also gonna assign random colors (for display purposes only) to the watershed results  [label2rgb](https://scikit-image.org/docs/stable/api/skimage.color.html#skimage.color.label2rgb) function from the color module of scikit-image.\n",
+    "To better visualize if the `watershed` did a good job, we will assign random colors to each cell mask (for display purposes only), [`label2rgb`](https://scikit-image.org/docs/stable/api/skimage.color.html#skimage.color.label2rgb) function from the `color` module of scikit-image does the trick.\n",
     "\n",
     "---\n",
     "\n",
@@ -272,7 +294,7 @@
     "\n",
     "---\n",
     "\n",
-    "Use the matplotlib imshow function to display the overlay as well as a cropped version of the overlay.\n",
+    "Use the `matplotlib` `imshow` function to display the overlay as well as a cropped version of the overlay.\n",
     "Use indexes [200:500, 200:600] to zoom in.\n",
     "```python\n",
     "plt.imshow(colored_labels[200:500, 200:600], cmap='gray')\n",
@@ -330,7 +352,7 @@
    "metadata": {},
    "source": [
     "## 4. Filtering out badly segmented cells using a classification algorithm\n",
-    "As you can see in the zoomed in colored_labels image, some cells are not properly segmented.  \n",
+    "As you can see in the zoomed in colored image, some cells are not properly segmented.  \n",
     "We will try to train a classifier to automatically classify well and badly segmented cells and then filter out badly segmented cells.  \n",
     "\n",
     "---\n",
@@ -341,7 +363,7 @@
     "\n",
     "---\n",
     "\n",
-    "Start by taking a look at the data by reading it using pandas.   \n",
+    "Start by taking a look at the data by reading it using `pandas`.   \n",
     "```python\n",
     "import pandas as pd\n",
     "data = pd.read_csv(\"../data/segmentation_quality.csv\")\n",
@@ -617,7 +639,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Train a LogisticRegression classifier to automatically classify well and badly segmented \n",
+    "## 5. Train a `LogisticRegression` classifier to automatically classify well and badly segmented \n",
     "Look at how you solved the classification problem in the previous notebook to complete the next steps:\n"
    ]
   },
@@ -654,7 +676,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "b) Train a LogisticRegression classifier and plot it's confusion matrix"
+    "b) Train a `LogisticRegression` classifier and plot it's confusion matrix"
    ]
   },
   {
@@ -703,9 +725,9 @@
    "source": [
     "## 6. Use the model to filter out badly segmented cells\n",
     "Let's start by measuring the morphological features of the segmented cells.   \n",
-    "For that we will be using [regionprops_table](https://scikit-image.org/docs/stable/api/skimage.measure.html#skimage.measure.regionprops_table) from skimage.measure.   \n",
+    "For that we will be using [`regionprops_table`](https://scikit-image.org/docs/stable/api/skimage.measure.html#skimage.measure.regionprops_table) from `skimage.measure`.   \n",
     "\n",
-    "Then we will convert the table to a pandas dataframe.\n",
+    "Then we will convert the table to a `pandas` dataframe.\n",
     "\n",
     "```python\n",
     "from skimage.measure import regionprops_table\n",
@@ -725,7 +747,7 @@
     "\n",
     "---\n",
     "\n",
-    "And finally we look at the table:\n",
+    "And finally, we look at the table:\n",
     "```python\n",
     "measurements.head()\n",
     "```"
@@ -845,7 +867,7 @@
    "source": [
     "Normalized the measurements as we did for the training data.   \n",
     "However, we need to normalize it according to the mean and standard deviation of the training data.   \n",
-    "We can adapt the code from the normalize_column function we used before:\n",
+    "We can adapt the code from the `normalize_column` function we used before:\n",
     "```python\n",
     "def normalize_column_test(data_column, mean, std):\n",
     "    # notice that now we pass the mean and std as arguments\n",
@@ -984,7 +1006,7 @@
    "source": [
     "## 7. Exercise: Apply the same steps to the sle1 images\n",
     "\n",
-    "You can find them under `data/images/` with names starting with `sle1_`"
+    "You can find them under `../data/images/` with names starting with `sle1_`"
    ]
   },
   {
