--- a/notebooks/solutions/4_numpy_neural_networks.ipynb
+++ b/notebooks/solutions/4_numpy_neural_networks.ipynb
@@ -212,7 +212,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "# available number of CPUs\n",
+    "n_cpu = 2\n",
+    "\n",
+    "# available RAM in GB\n",
+    "ram = 8\n",
+    "\n",
+    "# Create array: input_array\n",
+    "input_array = np.array([n_cpu, ram])"
    ]
   },
   {
@@ -274,7 +281,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "# initalize weights dictionary\n",
+    "weights = {}\n",
+    "\n",
+    "# Add hidden node 0 weights\n",
+    "weights['node_0'] = np.array([-1, 1])\n",
+    "\n",
+    "# Add hidden node 1 weights\n",
+    "weights['node_1'] = np.array([1, -2])\n",
+    "\n",
+    "# Add output node weights\n",
+    "weights['output'] = np.array([2, 1])"
    ]
   },
   {
@@ -308,7 +325,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "# Calculate node 0 value: node_0_value\n",
+    "node_0_value = (input_array * weights['node_0']).sum()\n",
+    "\n",
+    "# Calculate node 1 value: node_1_value\n",
+    "node_1_value = (input_array * weights['node_1']).sum()\n",
+    "\n",
+    "# Put node values into array: hidden_layer_outputs\n",
+    "hidden_layer_outputs = np.array([node_0_value, node_1_value])"
    ]
   },
   {
@@ -330,7 +354,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "# Calculate model output\n",
+    "output_value = (hidden_layer_outputs * weights['output']).sum()\n",
+    "\n",
+    "# Print the output value\n",
+    "print(f'The output value of the neural network is: {output_value}')"
    ]
   },
   {
@@ -384,7 +412,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "# Calculate node 0 value: node_0_value and apply ReLu function\n",
+    "node_0_value = (input_array * weights['node_0']).sum()\n",
+    "node_0_output = relu(node_0_value)\n",
+    "\n",
+    "# Calculate node 1 value: node_1_value and apply ReLu function\n",
+    "node_1_value = (input_array * weights['node_1']).sum()\n",
+    "node_1_output = relu(node_1_value)\n",
+    "\n",
+    "# Put node values into array: hidden_layer_outputs\n",
+    "hidden_layer_outputs = np.array([node_0_value, node_1_value])\n",
+    "\n",
+    "# Calculate output value: output_value and apply ReLu function\n",
+    "output_value = (hidden_layer_outputs * weights['output']).sum()\n",
+    "output_output = relu(output_value)\n",
+    "\n",
+    "# Print the output value\n",
+    "\n",
+    "print(f'The output value of the neural network using ReLu is: {output_value}')"
    ]
   },
   {
@@ -418,7 +463,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "# Calculate node 0 value: node_0_value and apply ReLu function\n",
+    "node_0_value = (input_array * weights['node_0']).sum() + 3\n",
+    "node_0_output = relu(node_0_value)\n",
+    "\n",
+    "# Calculate node 1 value: node_1_value and apply ReLu function\n",
+    "node_1_value = (input_array * weights['node_1']).sum() + 1\n",
+    "node_1_output = relu(node_1_value)\n",
+    "\n",
+    "# Put node values into array: hidden_layer_outputs\n",
+    "hidden_layer_outputs = np.array([node_0_value, node_1_value])\n",
+    "\n",
+    "# Calculate output value: output_value and apply ReLu function\n",
+    "output_value = (hidden_layer_outputs * weights['output']).sum() - 2\n",
+    "output_output = relu(output_value)\n",
+    "\n",
+    "\n",
+    "print(f'The output value of the neural network using ReLu and a bias is: {output_value}')"
    ]
   },
   {
